version/0.34/_sources/api/solver/_autosummary/settings/cell_centered.rst.txt
:orphan:

.. _cell_centered:

cell_centered
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.cell_centered
    :show-inheritance:

.. rubric:: Included in:

======================================================================   =================================================================================================================================================================

Parent                                                                                                                                                                                                                             Summary

======================================================================   =================================================================================================================================================================
:ref:`ensight_gold <ensight_gold>`                                                                                                                                                Write EnSight Gold geometry, velocity, and scalar files.

:ref:`ensight_gold_surface <ensight_gold_surface>`                                                                                                                                Write EnSight Gold geometry, velocity, and scalar files.

:ref:`cgns <cgns>`                                                                                                                                                                                                      Write a CGNS file.

:ref:`ensight_gold_parallel_surfaces <ensight_gold_parallel_surfaces>`                                         Write EnSight Gold geometry, velocity and scalar files for surfaces. Fluent will write files suitable for EnSight Parallel.

:ref:`ensight_gold_parallel_volume <ensight_gold_parallel_volume>`           Write EnSight Gold geometry, velocity and scalar files for cell zones and boundaries attached to them. Fluent will write files suitable for EnSight Parallel.

======================================================================   =================================================================================================================================================================

