version/0.42/_sources/api/solver/_autosummary/settings/cell_centered.rst.txt
:orphan:

.. _cell_centered:

cell_centered
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.cell_centered
    :show-inheritance:

.. rubric:: Included in:

======================================================================   =================================================================================================================================================================

Parent                                                                                                                                                                                                                             Summary

======================================================================   =================================================================================================================================================================
:ref:`ensight_gold <ensight_gold>`                                                                                                                                                Write EnSight Gold geometry, velocity, and scalar files.

:ref:`ensight_gold_surface <ensight_gold_surface>`                                                                                                                                Write EnSight Gold geometry, velocity, and scalar files.

:ref:`ensight_dvs <ensight_dvs>`                                                                                                                                                                                 Write a EnSight DVS file.

:ref:`visualize_output_options <visualize_output_options>`                                                                                                                     Setup write options for Visualize connection in Fluids One.

:ref:`cgns <cgns>`                                                                                                                                                                                                      Write a CGNS file.

:ref:`ensight_gold_parallel_surfaces <ensight_gold_parallel_surfaces>`                                         Write EnSight Gold geometry, velocity and scalar files for surfaces. Fluent will write files suitable for EnSight Parallel.

:ref:`ensight_gold_parallel_volume <ensight_gold_parallel_volume>`           Write EnSight Gold geometry, velocity and scalar files for cell zones and boundaries attached to them. Fluent will write files suitable for EnSight Parallel.

:ref:`vtk <vtk>`                                                                                                                                                                                             Write a VTK (.vtp/.vtu) file.

:ref:`ascii_1_child <ascii_1_child>`                                                                                                                                                                         'child_object_type' of ascii.

:ref:`cgns_1_child <cgns_1_child>`                                                                                                                                                                            'child_object_type' of cgns.

:ref:`visualize_child <visualize_child>`                                                                                                                                                                 'child_object_type' of visualize.

======================================================================   =================================================================================================================================================================

